# o3d_qt_charger_cpp

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.ui  my_detect.hpp  my_vtk.h  scanner_api.h
codes/: CMakeLists.txt  libscan_release.lib  mainwindow.h  my_detect.cpp  my_vtk.cpp  o3d.hpp
datas/: Camera3d_right.PLY  port_right.PLY
